--- a/app_admin/scripts/ml_xgboost.ipynb
+++ b/app_admin/scripts/ml_xgboost.ipynb
@@ -71,12 +71,8 @@
     "#==========================================================\n",
     "from ml_data_transform import DataTransform\n",
     "datatransform = DataTransform(df)\n",
-    "df = datatransform.remove_na(subset=['target_delay_difference']) # Supprimer les lignes où 'target_delay_difference' est manquant\n",
-    "df = datatransform.add_feat_infos_meteo()                        # Ajout des informations météo\n",
-    "df = datatransform.segment_to_col()                              # Transforme les segments en colonne\n",
-    "df = datatransform.add_feat_icon_score()                         # Ajout du score d'icône\n",
-    "df = datatransform.add_feat_distance_km()                        # Ajout de la distance du vol\n",
-    "df = datatransform.add_target_delay_diff()                       # Ajout de la variable cible 'target_delay_difference'\n",
+    "df = datatransform.apply_feat_transforms()\n",
+    "df = datatransform.apply_target_transforms()\n",
     "\n",
     "#==========================================================\n",
     "# Séparation du Dataset\n",
